# LASPATED

./: .gitignore  Dockerfile  INSTALL.md  INSTALL.txt  LICENSE  README.md  crossValidation.m  crossValidationNoReg.m  crossValidationR.m  crossValidationReg.m  laspated.m  laspatedex1noreg.m  laspatedex1reg.m  notes  oracleGradientModel1.m  oracleGradientModel2.m  oracleObjectiveModel1.m  oracleObjectiveModel2.m  params_plot_0.001.txt  projectedGradientArmijoFeasible.m  projectedGradientArmijoFeasible2.m  projectionRegressor.m  read_calls.m  read_calls_hol.m  read_calls_reg.m  readme_params_plot.dat.txt  setup.cfg  start.m  testCalls.m  tutorial_voronoi.txt  xNonRegressorT48G7I76P3_alpha0.001.txt
Data/: bases.csv  bases.shp
Discretization/: README.md  est_x.txt  main.py  plot_det_lambda.py  projection_model.lp  pseudo_codigo_projected.txt  region_rates_no_reg_real76_g336_obs105_n1.txt  regions_10x10.csv  replication_script.py  rio_rect10x10.csv  sample1_1.txt  samples.csv  table_det_no_covariates_results.txt  tutorial_voronoi.txt  usage_example.ipynb
Missing_Data/: missing  mn_samples_generator.py  plot_results.py  test.cfg
Model_Calibration/: laspated.h
Model_With_Regressors/: crossValidationRNohol.m  projectedGradientArmijoBoundary2.m  testCallModelCalibration2.m  testCallModelCalibration3.m  testCallModelCalibration4.m  testCallModelCalibration5.m  testRealDataReg.m
Model_Without_Regressors/: projectedGradientArmijoBoundary.m  testRealDataNoR.m  (+1 more)
laspated/: LICENSE.txt  README.md  pyproject.toml  requirements.txt
laspated/laspated/: __init__.py  h3_utils.py  squares.py
laspated/laspated/laspated.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
laspated/src/laspated/: __init__.py
laspated/src/laspated.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+604 files in other folders)
