[metadata]
name = laspated
version = 0.1.0
author = Vincent Guigues, Giovanni Amorin, André Krauss, Victor Nascimento
author_email = your email
description = Spatio-temporal discrete data analysis
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/vguigues/LASPATED
project_urls =
    Bug Tracker = https://github.com/vguigues/LASPATED/issues
    repository = https://github.com/vguigues/LASPATED
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# package_dir =
#     = laspated
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.20
    pandas==2.0.0
    geopandas==0.12.2
    matplotlib
    h3 
    geovoronoi 
    rtree 
    descartes

[options.packages.find]
where = laspated
